src/App.css
/* ... */
.dapp-button {
  margin: 0.5rem;

}


.dapp-button {
  background: #020202;
  color: white;
  font-size: 1.6rem;
  font-weight: bold;
  /* padding-right: "12px"; */
  padding: 20px;
  border: 10px solid rgb(0, 255, 238);
  /* padding: 0.3rem 0.5rem; */
  border-radius: 0.8rem;
  /* margin-left: 2rem; */
  /* margin-right: 8rem; */
  cursor: pointer;
  width: 10rem;
  height: 10rem;
  margin-left: 42%;
}
a {
  text-decoration: inherit;
}

.navbar .logo {
  font-size: 2rem;
  font-weight: bold;
  align-self: center;
  /* padding-left: 2%; */
  margin-left: 0;
}

.navbar .logo a {
  color: #fff;
  text-decoration: none;
  
}

.navbar .logo a:hover {
  padding: "";
  color: black;
  background-color: pink;
}

.connect-button {
  background: #020202;
  color: white;
  font-size: 1.6rem;
  font-weight: bold;
  border: 1px solid black;
  border: 10px solid rgb(0, 255, 238);

  /* padding: 0.3rem 0.5rem; */
  border-radius: 0.8rem;
  cursor: pointer;
  width: 12rem;
  height: 5.2rem;
}

.read-guide-button {
  background: #020202;
  color: white;
  font-size: 1.6rem;
  font-weight: bold;
  margin-right: 2rem;
  border: 1px solid black;
  border: 10px solid rgb(0, 0, 0);

  /* padding: 0.3rem 0.5rem; */
  border-radius: 0.8rem;
  cursor: pointer;
  width: 12rem;
  height: 5.2rem;
}

.watch-demo-button {
  background: #020202;
  color: white;
  font-size: 1.6rem;
  font-weight: bold;
  border: 1px solid black;
  border: 10px solid rgb(255, 23, 23);

  /* padding: 0.3rem 0.5rem; */
  border-radius: 0.8rem;
  cursor: pointer;
  width: 12rem;
  height: 5.2rem;
}
.enter-dapp-button {
  background: #e90270;
  color: white;
  font-size: 1.6rem;
  font-weight: bold;
  border: 1px solid black;
  /* padding: 0.3rem 0.5rem; */
  border-radius: 0.8rem;
  cursor: pointer;
  width: 12rem;
  height: 3.6rem;
}




.connect-button:active {
  background: #d00057;
  color: #fdfdfd;
}

.navbar label {
  background: #020406;
  font-size: 1.1rem;
  color: white;
  border: 1px solid black;
  padding: 0.5rem 0.7rem;
  border-radius: 0.8rem;
  margin: 0.2rem;
}

.account-button {
  background: #202428;
  font-size: 1.1rem;
  font: inherit;
  color: white;
  border: 1px solid black;
  padding: 0.5rem 0.7rem;
  border-radius: 0.8rem;
  margin: 0.2rem;
  cursor: pointer;
}

.account-button:active {
  background: #303438;
  color: #fdfdfd;
}

.navbar .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
}

.cards {
  display: flex;
  flex-direction: column;
  margin: 2rem auto;
  padding: 0 2rem;
  text-align: center;
  width: 80%;
}

.checkbox {
  display: flex;
  /* flex: 1; */
  flex-direction: horizontal;
  align-items: center;
}

textarea {
  font-size: 1.2rem;
  width: 100%;
  min-height: 420px;
  background: #cdc74f;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: #202428;
  color: #fff;
  border-radius: 0.8rem;
  margin: 1.25rem 0.7rem;
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
  padding: 1.2rem 2rem;
}
.expressions {
  background-color: #f1f1f1;
  padding: 1.2rem;
  margin-bottom: 0.5rem;
}
.expressions h2 {
  line-height: 1.2rem;
  margin-top: 0.6rem;
  text-align: center;
}

.expressions p {
  margin-top: 2rem;
  margin-bottom: 1.6rem;
  font-size: 1.2rem;
  text-align: center;
}
.last-expression-card p {
  height: auto;
  overflow-y: auto;
  font-size: 1.2rem;
}
.last-expression-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: #202428;
  color: #fff;
  border-radius: 0.8rem;
  margin: 1.25rem 0.7rem;
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
  padding: 1.2rem 2rem;
}

.new-expression-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: #202428;
  color: #fff;
  border-radius: 0.8rem;
  margin: 1.25rem 0.7rem;
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
  padding: 1.2rem 2rem;
}

.new-expression-card textarea {
  font-size: 1.4rem;
}

.new-expression-card button {
  background: #2073e5;
  color: white;
  font: inherit;
  font-size: 1.2rem;
  border: 1px solid black;
  padding: 0.3rem 0.5rem;
  border-radius: 0.8rem;
  cursor: pointer;
  /* margin: 1rem; */
  /* width: 60%; */
  margin-bottom: 1rem;
  margin-top: 12px;
}

/* divide a div in two  */
.left {
  width: 50%;
  float: left;
}

.right {
  width: 50%;
  float: right;
}

/* create a div with horizontal direction */

.vertical {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-content: space-between;
  align-items: center;
}

.blockbg-black {
  width: "200px";
  background-color: #202428;
}

/* create a row with two columns */
.button-row {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.last-expression-card button {
  background: #80e840;
  color: black;
  font: inherit;
  font-size: 1.2rem;
  border: 1px solid black;
  padding: 0.3rem 0.5rem;
  border-radius: 0.8rem;
  cursor: pointer;
  /* margin: 1rem; */
  /* width: 60%; */
  margin-bottom: 1rem;
}

.card button:active {
  background: #0e61d3;
  color: #fdfdfd;
}

.new-expression-card form {
  width: 100%;
}

.card input:hover,
.card input:focus {
  outline: 2px solid #383c44;
}

.card label {
  background: #282c34;
  width: 100%;
  border-radius: 0.8rem;
  font-size: 1.3rem;
  color: #f1f1f1;
  padding: 0.2rem;
  text-align: center;
  margin-bottom: 1rem;
}

.new-expression-card input {
  background: #282c34;
  border: hidden;
  width: 100%;
  border-radius: 0.8rem;
  font-size: 2rem;
  color: #f1f1f1;
  padding: 0.4rem 0.5rem;
  margin-bottom: 1rem;
}

footer {
  margin-top: auto;
  margin-bottom: auto;
  justify-content: flex-end;
  padding-bottom: 0.07rem;
  /* font-size: 0.7rem; */
  color: #d4d4d4;
}
/* ... */

